// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: MultichoiceOption when rendering should work with full props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Multichoice option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Label
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Label..."
      type="text"
      value="Some choice"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Description
    </span>
    <div
      className="markdown-textedit small preview"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <textarea
        className="nice-form-control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Description..."
        rows={8}
        value="Choice _desc_"
      />
      <span
        className="markdown-textedit__preview"
      >
        <p>
          Choice 
          <em>
            desc
          </em>
        </p>
      </span>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Add
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      min={0}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Add..."
      type="number"
      value={2}
    />
    <span
      className="nice-input-addon"
    >
      Limit
    </span>
    <input
      className="nice-form-control"
      disabled={true}
      min={0}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Limit..."
      type="number"
      value={0}
    />
    <span
      className="nice-input-addon"
    >
      Replace
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      min={0}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Replace..."
      type="number"
      value={1}
    />
  </div>
  <ul
    className="select-list-component"
  >
    <li>
      <fieldset
        className="nice-form-group"
      >
        <legend>
          Value option
        </legend>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Path
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Path..."
            type="text"
            value="some.path"
          />
        </div>
        <input
          checked={false}
          className="nice-toggle"
          disabled={undefined}
          id="toggle-1"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="nice-toggle-btn"
          htmlFor="toggle-1"
        >
          Hidden
        </label>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Label
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Label..."
            type="text"
            value="My Label"
          />
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Value
          </span>
          <div
            className="markdown-textedit small preview"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <textarea
              className="nice-form-control"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Value..."
              rows={8}
              value="some value"
            />
            <span
              className="markdown-textedit__preview"
            >
              <p>
                some value
              </p>
            </span>
          </div>
        </div>
      </fieldset>
      <button
        className="nice-btn select-list-component__delete warning icon fa-minus"
        name="del"
        onClick={[Function]}
      >
        ​
      </button>
    </li>
    <li
      className="select-list-component__last"
    >
      <div
        className="nice-dropdown nice-form-control select-list-component__add"
        color="primary"
        name="add"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <input
            className="nice-form-control"
            data-name="filter"
            disabled={undefined}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={null}
            placeholder="Filter..."
            type="text"
            value=""
          />
          <li
            className="info"
            data-value={null}
            onClick={[Function]}
          >
            <a>
              Add...
            </a>
          </li>
          <li
            className={null}
            data-value="ability_score"
            onClick={[Function]}
          >
            <a>
              Ability Score Improvement
            </a>
          </li>
          <li
            className={null}
            data-value="dict"
            onClick={[Function]}
          >
            <a>
              Dictionary option
            </a>
          </li>
          <li
            className={null}
            data-value="choice"
            onClick={[Function]}
          >
            <a>
              Choice option
            </a>
          </li>
          <li
            className={null}
            data-value="config"
            onClick={[Function]}
          >
            <a>
              Config option
            </a>
          </li>
          <li
            className={null}
            data-value="list"
            onClick={[Function]}
          >
            <a>
              List option
            </a>
          </li>
          <li
            className={null}
            data-value="manual"
            onClick={[Function]}
          >
            <a>
              Manual value option
            </a>
          </li>
          <li
            className={null}
            data-value="multichoice"
            onClick={[Function]}
          >
            <a>
              Multichoice option
            </a>
          </li>
          <li
            className={null}
            data-value="objectlist"
            onClick={[Function]}
          >
            <a>
              Object list option
            </a>
          </li>
          <li
            className={null}
            data-value="value"
            onClick={[Function]}
          >
            <a>
              Value option
            </a>
          </li>
          <li>
            Prefab options
            <ul>
              <li
                className={null}
                data-value="asi"
                onClick={[Function]}
              >
                <a>
                  Ability Score Increase
                </a>
              </li>
              <li
                className={null}
                data-value="asi or feat"
                onClick={[Function]}
              >
                <a>
                  ASI or Feat
                </a>
              </li>
              <li
                className={null}
                data-value="darkvision"
                onClick={[Function]}
              >
                <a>
                  Darkvision
                </a>
              </li>
              <li
                className={null}
                data-value="equipment"
                onClick={[Function]}
              >
                <a>
                  Equipment
                </a>
              </li>
              <li
                className={null}
                data-value="equipment packs"
                onClick={[Function]}
              >
                <a>
                  Equipment Packs
                </a>
              </li>
              <li
                className={null}
                data-value="hit dice"
                onClick={[Function]}
              >
                <a>
                  Hit Dice
                </a>
              </li>
              <li
                className={null}
                data-value="personalities"
                onClick={[Function]}
              >
                <a>
                  Personalities
                </a>
              </li>
              <li>
                Proficiencies
                <ul>
                  <li
                    className={null}
                    data-value="proficiencies.armor"
                    onClick={[Function]}
                  >
                    <a>
                      Armor Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.weapons"
                    onClick={[Function]}
                  >
                    <a>
                      Weapon Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.languages"
                    onClick={[Function]}
                  >
                    <a>
                      Language Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.saving_throws"
                    onClick={[Function]}
                  >
                    <a>
                      Saving Throws
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.expertise"
                    onClick={[Function]}
                  >
                    <a>
                      Expertise (Double Proficiency)
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.skills"
                    onClick={[Function]}
                  >
                    <a>
                      Skill Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.talent"
                    onClick={[Function]}
                  >
                    <a>
                      Talent (Half Proficiency)
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.tools"
                    onClick={[Function]}
                  >
                    <a>
                      Tool Proficiency
                    </a>
                  </li>
                </ul>
              </li>
              <li
                className={null}
                data-value="size"
                onClick={[Function]}
              >
                <a>
                  Size
                </a>
              </li>
              <li
                className={null}
                data-value="speed"
                onClick={[Function]}
              >
                <a>
                  Speed
                </a>
              </li>
              <li>
                Spells
                <ul>
                  <li
                    className={null}
                    data-value="ability"
                    onClick={[Function]}
                  >
                    <a>
                      Spellcasting Ability
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="cantrips"
                    onClick={[Function]}
                  >
                    <a>
                      Cantrips
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="spell.list"
                    onClick={[Function]}
                  >
                    <a>
                      Spells
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="casting"
                    onClick={[Function]}
                  >
                    <a>
                      Casting Spells
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="focus"
                    onClick={[Function]}
                  >
                    <a>
                      Spellcasting Focus
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="preparing"
                    onClick={[Function]}
                  >
                    <a>
                      Preparing Spells
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="ritual"
                    onClick={[Function]}
                  >
                    <a>
                      Ritual Casting
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</fieldset>
`;

exports[`Component: MultichoiceOption when rendering should work with minimum props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Multichoice option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Label
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Label..."
      type="text"
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Description
    </span>
    <div
      className="markdown-textedit small preview"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="markdown-textedit__placeholder"
      >
        Description...
      </span>
      <textarea
        className="nice-form-control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Description..."
        rows={8}
        value=""
      />
      <span
        className="markdown-textedit__preview"
      />
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Add
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      min={0}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Add..."
      type="number"
      value={0}
    />
    <span
      className="nice-input-addon"
    >
      Limit
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      min={0}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Limit..."
      type="number"
      value={0}
    />
    <span
      className="nice-input-addon"
    >
      Replace
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      min={0}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Replace..."
      type="number"
      value={0}
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Include
    </span>
    <div
      className="nice-dropdown nice-form-control"
    >
      <button
        className="nice-btn"
        disabled={false}
        onClick={[Function]}
      >
        Include option...
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className="info"
          data-value={null}
          onClick={[Function]}
        >
          <a>
            Include option...
          </a>
        </li>
        <li
          className={null}
          data-value={1}
          onClick={[Function]}
        >
          <a>
            Example include
          </a>
        </li>
      </ul>
    </div>
  </div>
  <ul
    className="select-list-component"
  >
    <li
      className="select-list-component__last"
    >
      <div
        className="nice-dropdown nice-form-control select-list-component__add"
        color="primary"
        name="add"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <input
            className="nice-form-control"
            data-name="filter"
            disabled={undefined}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={null}
            placeholder="Filter..."
            type="text"
            value=""
          />
          <li
            className="info"
            data-value={null}
            onClick={[Function]}
          >
            <a>
              Add...
            </a>
          </li>
          <li
            className={null}
            data-value="ability_score"
            onClick={[Function]}
          >
            <a>
              Ability Score Improvement
            </a>
          </li>
          <li
            className={null}
            data-value="dict"
            onClick={[Function]}
          >
            <a>
              Dictionary option
            </a>
          </li>
          <li
            className={null}
            data-value="choice"
            onClick={[Function]}
          >
            <a>
              Choice option
            </a>
          </li>
          <li
            className={null}
            data-value="config"
            onClick={[Function]}
          >
            <a>
              Config option
            </a>
          </li>
          <li
            className={null}
            data-value="list"
            onClick={[Function]}
          >
            <a>
              List option
            </a>
          </li>
          <li
            className={null}
            data-value="manual"
            onClick={[Function]}
          >
            <a>
              Manual value option
            </a>
          </li>
          <li
            className={null}
            data-value="multichoice"
            onClick={[Function]}
          >
            <a>
              Multichoice option
            </a>
          </li>
          <li
            className={null}
            data-value="objectlist"
            onClick={[Function]}
          >
            <a>
              Object list option
            </a>
          </li>
          <li
            className={null}
            data-value="value"
            onClick={[Function]}
          >
            <a>
              Value option
            </a>
          </li>
          <li>
            Prefab options
            <ul>
              <li
                className={null}
                data-value="asi"
                onClick={[Function]}
              >
                <a>
                  Ability Score Increase
                </a>
              </li>
              <li
                className={null}
                data-value="asi or feat"
                onClick={[Function]}
              >
                <a>
                  ASI or Feat
                </a>
              </li>
              <li
                className={null}
                data-value="darkvision"
                onClick={[Function]}
              >
                <a>
                  Darkvision
                </a>
              </li>
              <li
                className={null}
                data-value="equipment"
                onClick={[Function]}
              >
                <a>
                  Equipment
                </a>
              </li>
              <li
                className={null}
                data-value="equipment packs"
                onClick={[Function]}
              >
                <a>
                  Equipment Packs
                </a>
              </li>
              <li
                className={null}
                data-value="hit dice"
                onClick={[Function]}
              >
                <a>
                  Hit Dice
                </a>
              </li>
              <li
                className={null}
                data-value="personalities"
                onClick={[Function]}
              >
                <a>
                  Personalities
                </a>
              </li>
              <li>
                Proficiencies
                <ul>
                  <li
                    className={null}
                    data-value="proficiencies.armor"
                    onClick={[Function]}
                  >
                    <a>
                      Armor Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.weapons"
                    onClick={[Function]}
                  >
                    <a>
                      Weapon Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.languages"
                    onClick={[Function]}
                  >
                    <a>
                      Language Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.saving_throws"
                    onClick={[Function]}
                  >
                    <a>
                      Saving Throws
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.expertise"
                    onClick={[Function]}
                  >
                    <a>
                      Expertise (Double Proficiency)
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.skills"
                    onClick={[Function]}
                  >
                    <a>
                      Skill Proficiency
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.talent"
                    onClick={[Function]}
                  >
                    <a>
                      Talent (Half Proficiency)
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="proficiencies.tools"
                    onClick={[Function]}
                  >
                    <a>
                      Tool Proficiency
                    </a>
                  </li>
                </ul>
              </li>
              <li
                className={null}
                data-value="size"
                onClick={[Function]}
              >
                <a>
                  Size
                </a>
              </li>
              <li
                className={null}
                data-value="speed"
                onClick={[Function]}
              >
                <a>
                  Speed
                </a>
              </li>
              <li>
                Spells
                <ul>
                  <li
                    className={null}
                    data-value="ability"
                    onClick={[Function]}
                  >
                    <a>
                      Spellcasting Ability
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="cantrips"
                    onClick={[Function]}
                  >
                    <a>
                      Cantrips
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="spell.list"
                    onClick={[Function]}
                  >
                    <a>
                      Spells
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="casting"
                    onClick={[Function]}
                  >
                    <a>
                      Casting Spells
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="focus"
                    onClick={[Function]}
                  >
                    <a>
                      Spellcasting Focus
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="preparing"
                    onClick={[Function]}
                  >
                    <a>
                      Preparing Spells
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value="ritual"
                    onClick={[Function]}
                  >
                    <a>
                      Ritual Casting
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</fieldset>
`;
